# wecs

./: .clang-format  .gitignore  CMakeLists.txt
test/: CMakeLists.txt
test/entity/: CMakeLists.txt  entity.cpp  mixin.cpp  registry.cpp  sparse_set.cpp  storage.cpp
test/signal/: CMakeLists.txt  delegate.cpp  dispatcher.cpp  sink.cpp
wecs/: wecs.hpp
wecs/config/: config.hpp  type_info.hpp
wecs/core/: ident.hpp  type_list.hpp  utility.hpp
wecs/entity/: component.hpp  entity.hpp  fwd.hpp  mixin.hpp  registry.hpp  sparse_set.hpp  storage.hpp  view.hpp
wecs/signal/: delegate.hpp  dispatcher.hpp  fwd.hpp  sigh.hpp  sink.hpp
